# cpp-gtest-coveralls-starter

./: CMakeLists.txt  README.md  travis.sh
tests/: mediator_unittests.cc
